Mise à jour du swagger
